# AutoTA-discord-bot

./: Question1.ipynb  README.md  attendance.json  bot ideas  export_file.py  main.py  pyproject.toml  stay_awake.py  students_points.json
