[tool.poetry]
name = "repl_python3_discord-bot"
version = "0.1.0"
description = ""
authors = ["vanessaland <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
